--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
 				<section class="contents block">
 					<div class="cont">
 						<div class="contents_title title">Оглавление книги</div>
-						<div class="accordion">							
-													
+						<div class="accordion">						
 							<div class="accordion_item">
 								<div class="accordion_item-head">		
 													
@@ -472,6 +471,114 @@
 								<span>Это уникальный шанс изменить всё к лучшему</span>
 							</li>
 						</ul>
+					</div>
+				</section>
+
+
+
+				<section class="price block">
+					<div class="cont">
+						<div class="price_title title">Сколько стоит выход из кризиса после расставания?</div>
+						<div class="price_items">
+							<div class="price_item">Десятки тысяч на консультации с психологами</div>
+							<div class="price_item">Сотни тысяч на терапию и лечение психики</div>
+							<div class="price_item">Бесценное здоровье физическое и психологическое</div>
+							<div class="price_item">Подарки для бывших с цветами и прочим, лишь бы они вернулись</div>
+						</div>
+						<div class="price_bottom"><b>Стоимость данной книги всего…</b><br> <span>5000 рублей. </span><br> Это копейки</div>
+					</div>
+				</section>
+
+
+				<section class="reviews block">
+					<div class="cont">
+						<div class="reviews_title title">Что говорят те, кто уже прочитали книгу:</div>
+						<div class="reviews_wrap">
+							<div class="swiper">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<img src="images/reviews1.png" alt="">
+									</div>
+									<div class="swiper-slide">
+										<img src="images/reviews2.png" alt="">
+									</div>
+									<div class="swiper-slide">
+										<img src="images/reviews3.png" alt="">
+									</div>
+									<div class="swiper-slide">
+										<img src="images/reviews4.png" alt="">
+									</div>
+									<div class="swiper-slide">
+										<img src="images/reviews5.png" alt="">
+									</div>
+								</div>
+								<div class="swiper-button-prev">
+									<img src="images/prev.svg" alt="">
+								</div>
+								<div class="swiper-button-next">
+									<img src="images/next.svg" alt="">
+								</div>
+							</div>	
+						</div>						
+					</div>
+				</section>
+
+
+
+				<section class="need block">
+					<div class="cont">
+						<div class="title">Бонусы</div>
+						<ul>
+							<li>
+								<b></b>
+								<span>Расширенные доступ к сообществам <a href="flirt-style.ru">Flirt-Style.ru</a> <i>и</i> <a href="flirt-woman.ru">Flirt-Woman.ru</a></span>
+							</li>
+							<li>
+								<b></b>
+								<span>Приглашение на закрытые вебинары Романа Винилова</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Авторские подкасты Романа Винилова по теме отношений</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Аудио-Семинар «Воспитание детей»</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Книга Романа Винилова по развитию личности</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Дополнительные материалы для решения проблемы</span>
+							</li>
+						</ul>
+					</div>
+				</section>
+
+
+				<section class="book block">
+					<div class="cont">
+						<div class="book_title title">Да, Роман, я хочу научиться строить счастливые отношения</div>
+						<div class="book_wrap">
+							<div class="book_img">
+								<img src="images/first-section-img.png" alt="">
+							</div>
+							<div class="book_info">
+								<div class="book_text-big">Я понимаю, что после того, как я оплачу этот заказ, и поддержка обработает его, я получу на указанный ящик электронной почты в виде ссылок на скачивание книгу «Двое. Жизнь после секса»</div>
+								<div class="book_text-average">Чтобы оплатить эту книгу и получить ссылки на скачивание на свою электронную почту - кликай на кнопку "ХОЧУ КНИГУ" ПРЯМО СЕЙЧАС:</div>
+								<a href="#" class="btn-orange">Хочу книгу сейчас!</a>
+								<div class="book_text-small">Ты получишь книгу в популярных форматах и сможешь открыть её на любых гаджетах</div>
+							</div>
+						</div>
+						<div class="book_bottom">
+							<div class="book_bottom-info">
+								<p>Есть вопросы?</p>
+								<p>Звони или пиши в мою службу поддержки клиентов</p>
+							</div>
+							<a href="tel:+79830001116">+7(983)000-1116</a>
+						</div>
 					</div>
 				</section>
 
