--- a/index.html
+++ b/index.html
@@ -560,25 +560,27 @@
 
 				<section class="book block">
 					<div class="cont">
-						<div class="book_title title">Да, Роман, я хочу научиться строить счастливые отношения</div>
-						<div class="book_wrap">
-							<div class="book_img">
-								<img src="images/first-section-img.png" alt="">
+						<div class="book_box">
+							<div class="book_title title">Да, Роман, я хочу научиться строить счастливые отношения</div>
+							<div class="book_wrap">
+								<div class="book_img">
+									<img src="images/first-section-img.png" alt="">
+								</div>
+								<div class="book_info">
+									<div class="book_text-big">Я понимаю, что после того, как я оплачу этот заказ, и поддержка обработает его, я получу на указанный ящик электронной почты в виде ссылок на скачивание книгу «Двое. Жизнь после секса»</div>
+									<div class="book_text-average">Чтобы оплатить эту книгу и получить ссылки на скачивание на свою электронную почту - кликай на кнопку "ХОЧУ КНИГУ" ПРЯМО СЕЙЧАС:</div>
+									<a href="#" class="btn-orange">Хочу книгу сейчас!</a>
+									<div class="book_text-small">Ты получишь книгу в популярных форматах и сможешь открыть её на любых гаджетах</div>
+								</div>
 							</div>
-							<div class="book_info">
-								<div class="book_text-big">Я понимаю, что после того, как я оплачу этот заказ, и поддержка обработает его, я получу на указанный ящик электронной почты в виде ссылок на скачивание книгу «Двое. Жизнь после секса»</div>
-								<div class="book_text-average">Чтобы оплатить эту книгу и получить ссылки на скачивание на свою электронную почту - кликай на кнопку "ХОЧУ КНИГУ" ПРЯМО СЕЙЧАС:</div>
-								<a href="#" class="btn-orange">Хочу книгу сейчас!</a>
-								<div class="book_text-small">Ты получишь книгу в популярных форматах и сможешь открыть её на любых гаджетах</div>
-							</div>
-						</div>
-						<div class="book_bottom">
-							<div class="book_bottom-info">
-								<p>Есть вопросы?</p>
-								<p>Звони или пиши в мою службу поддержки клиентов</p>
-							</div>
-							<a href="tel:+79830001116">+7(983)000-1116</a>
-						</div>
+							<div class="book_bottom">
+								<div class="book_bottom-info">
+									<p>Есть вопросы?</p>
+									<p>Звони или пиши в мою службу поддержки клиентов</p>
+								</div>
+								<a href="tel:+79830001116">+7(983)000-1116</a>
+							</div>	
+						</div>						
 					</div>
 				</section>
 
