--- a/index.html
+++ b/index.html
@@ -585,6 +585,36 @@
 				</section>
 
 
+				<section class="volume">
+					<div class="cont">
+						<div class="volume_title title">Другие книги автора</div>
+						<div class="volume_items">
+							<div class="volume_item">
+								<div class="volume_item-img">
+									<img src="images/book1.png" alt="">
+								</div>
+								<div class="volume_item-title">Восстановление отношений от А до Я</div>
+								<div class="volume_item-text">Легендарна книга Романа Винилова про восстановление отношений. Её читали могут себе позволить восстановить отношеняи в кратчайшие сроки даже в самых сложных ситуациях. Книгу прочитали уже более 15 тысяч людей по всему миру</div>
+							</div>
+							<div class="volume_item">
+								<div class="volume_item-img">
+									<img src="images/book2.png" alt="">
+								</div>
+								<div class="volume_item-title">Быть мужчиной </div>
+								<div class="volume_item-text">Первая книга Романа Винилова, написанная для мужчин. Книга стала популярной потому, что давала простые ответы на сложные вопросы мужчин и показывала как быть мужчиной в наше не простое время</div>
+							</div>
+							<div class="volume_item">
+								<div class="volume_item-img">
+									<img src="images/book3.png" alt="">
+								</div>
+								<div class="volume_item-title">Быть мужчиной. Жизнь после развода </div>
+								<div class="volume_item-text">Книга про то, как обычный человек может преодолеть сложнейший кризис в своей жизни. В основу книги положена личная история Романа Винилова – его год жизни после развода. Когда он остался один с ребёнком на руках без поддержки кого-либо</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+
 
 			</div>
 			
