--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 				</section>
 
 
-				<section class="volume">
+				<section class="volume block">
 					<div class="cont">
 						<div class="volume_title title">Другие книги автора</div>
 						<div class="volume_items">
@@ -616,12 +616,157 @@
 
 
 
+				<section class="reviews2 block">
+					<div class="cont">
+						<div class="reviews_title title">Еще отзывы</div>
+						<div class="reviews_wrap">
+							<div class="swiper">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<img src="images/reviews6.png" alt="">
+									</div>
+									<div class="swiper-slide">
+										<img src="images/reviews7.png" alt="">
+									</div>
+									<div class="swiper-slide">
+										<img src="images/reviews8.png" alt="">
+									</div>
+									<div class="swiper-slide">
+										<img src="images/reviews6.png" alt="">
+									</div>
+									<div class="swiper-slide">
+										<img src="images/reviews7.png" alt="">
+									</div>
+									<div class="swiper-slide">
+										<img src="images/reviews8.png" alt="">
+									</div>
+								</div>
+								<div class="swiper-button-prev">
+									<img src="images/prev.svg" alt="">
+								</div>
+								<div class="swiper-button-next">
+									<img src="images/next.svg" alt="">
+								</div>
+							</div>	
+						</div>						
+					</div>
+				</section>
+
+
+
+				<section class="need blok bg">
+					<div class="cont">
+						<div class="need_title title">Кто такой автор книги — Роман Винилов</div>
+						<div class="need_img">
+							<img src="images/author.png" alt="">
+						</div>
+						<ul>
+							<li>
+								<b></b>
+								<span>Расширенные доступ к сообществам <a href="flirt-style.ru">Flirt-Style.ru</a> <i>и</i> <a href="flirt-woman.ru">Flirt-Woman.ru</a></span>
+							</li>
+							<li>
+								<b></b>
+								<span>Приглашение на закрытые вебинары Романа Винилова</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Авторские подкасты Романа Винилова по теме отношений</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Аудио-Семинар «Воспитание детей»</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Книга Романа Винилова по развитию личности</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Дополнительные материалы для решения проблемы</span>
+							</li>
+						</ul>
+					</div>
+				</section>
+
+
+
+				<section class="faq block">
+					<div class="cont">
+						<div class="faq_title title">Ответы на часто задаваемые вопросы</div>
+						<div class="accordion">						
+							<div class="accordion_item">
+								<div class="accordion_item-head">													
+									<div class="accordion_item-title">Каким способом я получу этот продукт?</div>	
+									<div class="accordion_item-icon">
+										<img src="images/arrow3.svg" alt="">
+									</div>																		
+								</div>
+								<div class="accordion_item-data">
+									Продукт поставляется в электронном виде ссылками для скачивания, которые приходят на указанный Вами емейл практически сразу же (зависит от способа оплаты).
+								</div>
+							</div>	
+							
+							<div class="accordion_item">
+								<div class="accordion_item-head">													
+									<div class="accordion_item-title">Каким способом я получу этот продукт?</div>	
+									<div class="accordion_item-icon">
+										<img src="images/arrow3.svg" alt="">
+									</div>																		
+								</div>
+								<div class="accordion_item-data">
+									Продукт поставляется в электронном виде ссылками для скачивания, которые приходят на указанный Вами емейл практически сразу же (зависит от способа оплаты).
+								</div>
+							</div>	
+
+							
+						</div>
+					</div>
+				</section>
+
+
+
 			</div>
 			
 
 
 			<footer>
-				<div class="cont"></div>
+				<div class="cont">
+					<div class="footer_wrap">
+						<div class="footer_items">
+							<div class="footer_item">
+								<div class="footer_item-title">Контактный телефон</div>
+								<a href="tel:+79830001116" class="footer_item-text">+7 983 000 111 6</a>
+							</div>
+							<div class="footer_item">
+								<div class="footer_item-title">Электронная почта</div>
+								<a href="mailto:couch@romanvinilov.ru" class="footer_item-text">couch@romanvinilov.ru</a>
+							</div>
+							<div class="footer_item">
+								<div class="footer_item-title">Сайт автора</div>
+								<a href="RVCouch.ru" class="footer_item-text">RVCouch.ru</a>
+							</div>
+							<div class="footer_item">
+								<div class="footer_item-copy">© 2024, ИП Винилов</div>
+							</div>
+						</div>
+						<div class="footer_info">
+							<div class="footer_soc">
+								<a href="#">
+									<img src="images/soc1.svg" alt="">
+								</a>
+								<a href="#">
+									<img src="images/soc2.svg" alt="">
+								</a>
+								<a href="#">
+									<img src="images/soc3.svg" alt="">
+								</a>
+							</div>
+							<div class="footer_text-big">Обучение мужчин. Развитие и отношения. Возрастные ограничения <span>18+</span></div>
+							<div class="footer_text-small">* Meta Platforms Inc. (соц. сети Instagram) признана экстремистской, её деятельность запрещена на территории России.</div>
+						</div>
+					</div>
+				</div>
 			</footer>
 
 
