--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 									</div>										
 								</div>
 								<div class="accordion_item-data">
-									<ul>
+									<ol>
 										<li>Знания про отношения</li>
 										<li>Как люди строят отношения</li>
 										<li>Почему отношения не получаются</li>
@@ -145,7 +145,7 @@
 										<li>Почему нужно учиться</li>
 										<li>Отношения в прошлых поколениях</li>
 										<li>Патологические жизненные сценарии</li>
-									</ul>
+									</ol>
 								</div>
 							</div>	
 
@@ -160,7 +160,7 @@
 									</div>										
 								</div>
 								<div class="accordion_item-data">
-									<ul>
+									<ol>
 										<li>Пониманием смыслов</li>
 										<li>Главный вопрос</li>
 										<li>Как не нужно делать</li>
@@ -170,7 +170,7 @@
 										<li>Почему нужно учиться</li>
 										<li>Психологическое здоровье</li>
 										<li>Стрессоустойчивость</li>
-									</ul>
+									</ol>
 								</div>
 							</div>	
 
@@ -185,7 +185,7 @@
 									</div>										
 								</div>
 								<div class="accordion_item-data">
-									<ul>
+									<ol>
 										<li>Здоровые отношения</li>
 										<li>Этапы отношений</li>
 										<li>Правила отношений</li>
@@ -198,7 +198,7 @@
 										<li>Эмоции</li>
 										<li>Трёхкомпонентная теория любви</li>
 										<li>Образное мышление</li>
-									</ul>
+									</ol>
 								</div>
 							</div>	
 
@@ -213,7 +213,7 @@
 									</div>										
 								</div>
 								<div class="accordion_item-data">
-									<ul>
+									<ol>
 										<li>Поиск и выбор партнёра</li>
 										<li>Первая любовь</li>
 										<li>Совместимость</li>
@@ -223,7 +223,7 @@
 										<li>Взаимность и баланс</li>
 										<li>Как мужчине понять женщину</li>
 										<li>Как женщине понять мужчину</li>
-									</ul>
+									</ol>
 								</div>
 							</div>
 
@@ -238,7 +238,7 @@
 									</div>										
 								</div>
 								<div class="accordion_item-data">
-									<ul>
+									<ol>
 										<li>Зачем нужен фундамент</li>
 										<li>Личные границы в отношениях</li>
 										<li>Отношение к партнёру</li>
@@ -247,7 +247,7 @@
 										<li>Диалог в отношениях</li>
 										<li>Принятие и честность</li>
 										<li>Главный секрет здоровых отношений</li>
-									</ul>
+									</ol>
 								</div>
 							</div>
 
@@ -262,7 +262,7 @@
 									</div>										
 								</div>
 								<div class="accordion_item-data">
-									<ul>
+									<ol>
 										<li>Влюблённость</li>
 										<li>Настоящая любовь</li>
 										<li>Сожительство</li>
@@ -271,7 +271,7 @@
 										<li>Переход на новый этап</li>
 										<li>Гармония и баланс</li>
 										<li>Личный кризис</li>
-									</ul>
+									</ol>
 								</div>
 							</div>
 
@@ -286,13 +286,13 @@
 									</div>										
 								</div>
 								<div class="accordion_item-data">
-									<ul>
+									<ol>
 										<li>Духовный уровень</li>
 										<li>Эмоциональный</li>
 										<li>Сексуальный уровень</li>
 										<li>Физический и материальный</li>
 										<li>Интеллектуальный уровень</li>
-									</ul>
+									</ol>
 								</div>
 							</div>
 
@@ -307,7 +307,7 @@
 									</div>										
 								</div>
 								<div class="accordion_item-data">
-									<ul>
+									<ol>
 										<li>Главные причины</li>
 										<li>Искусство расставания</li>
 										<li>Взаимное расставание</li>
@@ -315,7 +315,7 @@
 										<li>Новая жизнь</li>
 										<li>Дети после развода</li>
 										<li>Восстановление отношений</li>
-									</ul>
+									</ol>
 								</div>
 							</div>
 
@@ -330,12 +330,12 @@
 									</div>										
 								</div>
 								<div class="accordion_item-data">
-									<ul>
+									<ol>
 										<li>Важное спустя много лет</li>
 										<li>Заново влюбляться</li>
 										<li>Наполнение жизни</li>
 										<li>Смыслы спустя десятилетия</li>
-									</ul>
+									</ol>
 								</div>
 							</div>
 
@@ -350,7 +350,7 @@
 									</div>										
 								</div>
 								<div class="accordion_item-data">
-									<ul>
+									<ol>
 										<li>Конфликты</li>
 										<li>Кризисы в отношениях</li>
 										<li>Причины расставаний</li>
@@ -358,7 +358,7 @@
 										<li>Пауза в отношениях</li>
 										<li>Любовная зависимость</li>
 										<li>Дистанцирование</li>
-									</ul>
+									</ol>
 								</div>
 							</div>
 							
@@ -709,13 +709,43 @@
 							
 							<div class="accordion_item">
 								<div class="accordion_item-head">													
-									<div class="accordion_item-title">Каким способом я получу этот продукт?</div>	
+									<div class="accordion_item-title">Почему Вы даёте такие гарантии, я же могу сразу потребовать возврат денег?</div>	
 									<div class="accordion_item-icon">
 										<img src="images/arrow3.svg" alt="">
 									</div>																		
 								</div>
 								<div class="accordion_item-data">
-									Продукт поставляется в электронном виде ссылками для скачивания, которые приходят на указанный Вами емейл практически сразу же (зависит от способа оплаты).
+									Наверняка у Вас могла появиться мысль — а что если я закажу книгу, скопирую её себе, а потом сделаю вид, что мне не понравилось и потребую назад свои деньги. Да, Вы можете сделать так и мы вернём деньги. Но вместе с этим мы верим, что большинство наших клиентов - осознанные и адекватные люди, для которых это не такая уж и большая сумма, чтобы всем этим заниматься. Также особо следует отметить непревзойдённое качество моих продуктов. Правила возврата описаны в п.5 правил возврата. Осуществляя заказ и оплату продукта, Вы соглашаетесь с данными правилами.
+								</div>
+							</div>	
+
+							<div class="accordion_item">
+								<div class="accordion_item-head">													
+									<div class="accordion_item-title">Зачем Вам мой номер телефона?</div>	
+									<div class="accordion_item-icon">
+										<img src="images/arrow3.svg" alt="">
+									</div>																		
+								</div>
+								<div class="accordion_item-data">
+									Номер телефона необходимо указать, чтобы с Вами связался наш менеджер и помог легко оплатить заказ. В виду конфиденциальности я обязуюсь не передавать Ваши данные третьим лицам и гарантирую, что о покупке никто никогда не узнает.
+								</div>
+							</div>	
+
+							<div class="accordion_item">
+								<div class="accordion_item-head">													
+									<div class="accordion_item-title">Есть ли у Вас поддержка клиентов?</div>	
+									<div class="accordion_item-icon">
+										<img src="images/arrow3.svg" alt="">
+									</div>																		
+								</div>
+								<div class="accordion_item-data">
+									<p>Да, конечно. Она осуществляется моей службой поддержки пользователей.</p>
+									<ul>
+										<li>Через электронную почту <a href="mailto:justclick@rvcouch.ru">justclick@rvcouch.ru</a></li>
+										<li>По телефону <b><a href="tel:89830001116">8-983-000-111-6</a></b> (Менеджер Александр)</li>
+										<li>Через менеджера Дмитрия <a href="#">ВКонтакте</a></li>
+										<li>Через наш форум<a href="Flirt-Style">Flirt-Style</a></li>
+									</ul>
 								</div>
 							</div>	
 
