--- a/index.html
+++ b/index.html
@@ -383,27 +383,11 @@
 							</li>
 							<li>
 								<b></b>
-								<span>Недавно был развод и расставание</span>
-							</li>
-							<li>
-								<b></b>
-								<span>НВы готовитесь к новым отношениям своей мечты</span>
-							</li>
-							<li>
-								<b></b>
-								<span>Есть отношения, которые хочется вывести на новый уровень</span>
-							</li>
-							<li>
-								<b></b>
-								<span>Есть отношения, которые хочется вывести на новый уровень</span>
-							</li>
-							<li>
-								<b></b>
-								<span>В семье встал вопрос развода</span>
-							</li>
-							<li>
-								<b></b>
 								<span>Был неудачный опыт отношений</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Недавно был развод и расставание</span>
 							</li>
 							<li>
 								<b></b>
@@ -411,11 +395,15 @@
 							</li>
 							<li>
 								<b></b>
+								<span>Вы готовитесь к новым отношениям своей мечты</span>
+							</li>
+							<li>
+								<b></b>
 								<span>Есть отношения, но вы ими недовольны</span>
 							</li>
 							<li>
 								<b></b>
-								<span>Есть кризис в семье и хочется разобраться</span>
+								<span>Есть отношения, которые хочется вывести на новый уровень</span>
 							</li>
 							<li>
 								<b></b>
@@ -423,7 +411,19 @@
 							</li>
 							<li>
 								<b></b>
+								<span>Есть отношения, которые хочется вывести на новый уровень</span>
+							</li>
+							<li>
+								<b></b>
 								<span>Есть кризис в семье и хочется разобраться</span>
+							</li>
+							<li>
+								<b></b>
+								<span>В семье встал вопрос развода</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Партнёр впервые сказал о расставании</span>
 							</li>
 						</ul>
 					</div>
@@ -452,20 +452,20 @@
 							</li>
 							<li>
 								<b></b>
-								<span>Не стоит дожидаться проблем в отношениях</span>
-							</li>
-							<li>
-								<b></b>
-								<span>Вы не будете делать ошибок в отношениях</span>
-							</li>
-							<li>
-								<b></b>
 								<span>Важно знать, как строить счастливые отношения</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Не стоит дожидаться проблем в отношениях</span>
 							</li>
 							<li>
 								<b></b>
 								<span>Если уже есть проблемы – их нужно решать оперативно</span>
 							</li>
+							<li>
+								<b></b>
+								<span>Вы не будете делать ошибок в отношениях</span>
+							</li>					
 							<li>
 								<b></b>
 								<span>Это уникальный шанс изменить всё к лучшему</span>
@@ -535,20 +535,20 @@
 							</li>
 							<li>
 								<b></b>
-								<span>Приглашение на закрытые вебинары Романа Винилова</span>
-							</li>
-							<li>
-								<b></b>
-								<span>Авторские подкасты Романа Винилова по теме отношений</span>
-							</li>
-							<li>
-								<b></b>
 								<span>Аудио-Семинар «Воспитание детей»</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Приглашение на закрытые вебинары Романа Винилова</span>
 							</li>
 							<li>
 								<b></b>
 								<span>Книга Романа Винилова по развитию личности</span>
 							</li>
+							<li>
+								<b></b>
+								<span>Авторские подкасты Романа Винилова по теме отношений</span>
+							</li>			
 							<li>
 								<b></b>
 								<span>Дополнительные материалы для решения проблемы</span>
@@ -663,27 +663,59 @@
 						<ul>
 							<li>
 								<b></b>
-								<span>Расширенные доступ к сообществам <a href="flirt-style.ru">Flirt-Style.ru</a> <i>и</i> <a href="flirt-woman.ru">Flirt-Woman.ru</a></span>
+								<span>Опыт консультирования — 18 лет. Начало работы: 02 февраля 2006 года</span>
 							</li>
 							<li>
 								<b></b>
-								<span>Приглашение на закрытые вебинары Романа Винилова</span>
+								<span>Первый, кто стал профессионально работать в теме помощи мужчинам по части психологии</span>
 							</li>
 							<li>
 								<b></b>
-								<span>Авторские подкасты Романа Винилова по теме отношений</span>
+								<span>Есть квалификация семейного психолога, образование гештальт-психолога</span>
 							</li>
 							<li>
 								<b></b>
-								<span>Аудио-Семинар «Воспитание детей»</span>
+								<span>Состоит в ассоциации по когнитивно-поведенческой терапии</span>
 							</li>
 							<li>
 								<b></b>
-								<span>Книга Романа Винилова по развитию личности</span>
+								<span>EMDR-терапевт</span>
 							</li>
 							<li>
 								<b></b>
-								<span>Дополнительные материалы для решения проблемы</span>
+								<span>Результаты в личной работе с первой сессии</span>
+							</li>
+							<li>
+								<b></b>
+								<span>90% экспертов и блогеров мужской темы появились под влиянием Романа Винилова</span>
+							</li>
+							<li>
+								<b></b>
+								<span>50% экспертов и блогеров на YT консультировались по своим проблемам с Романом Виниловым</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Консультирование online и в крупнейших городах РФ, СНГ и ЕС</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Каждый день 3-5 консультаций</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Всего более 5000 консультаций</span>
+							</li>
+							<li>
+								<b></b>
+								<span>Основатель сообщества для мужчин: <a href="Flirt-Style.ru">Flirt-Style.ru</a></span>
+							</li>
+							<li>
+								<b></b>
+								<span>Работает на трёх языках</span>
+							</li>						
+							<li>
+								<b></b>
+								<span>Клиенты по всему миру</span>
 							</li>
 						</ul>
 					</div>
@@ -749,7 +781,63 @@
 								</div>
 							</div>	
 
-							
+							<div class="accordion_item">
+								<div class="accordion_item-head">													
+									<div class="accordion_item-title">Как мне произвести оплату через терминал оплаты, если там отсутствует графа «Комментарий к платежу»? Как вы узнаете, что средства поступили именно от меня?</div>	
+									<div class="accordion_item-icon">
+										<img src="images/arrow3.svg" alt="">
+									</div>																		
+								</div>
+								<div class="accordion_item-data">
+									Все просто. После оплаты напишите нам на почту <a href="mailto:justclick@rvcouch.ru">justclick@rvcouch.ru</a> или по любым другим контактам Поддержки и сообщите Ваш емейл, время и способ платежа. Мы проверим платеж и отметим заказ оплаченным. Можно прикрепить фото квитанции об оплате. Как правило, этого достаточно для скорейшего получения продукта.
+								</div>
+							</div>	
+
+							<div class="accordion_item">
+								<div class="accordion_item-head">													
+									<div class="accordion_item-title">Как мне оплатить продукт, если я из Белоруссии, Казахстана, Европы и т.д.?</div>	
+									<div class="accordion_item-icon">
+										<img src="images/arrow3.svg" alt="">
+									</div>																		
+								</div>
+								<div class="accordion_item-data">
+									Свяжитесь с нами телефону <b><a href="tel:+79830001116">+7 (983) 000-111-6</a></b> (Менеджер Александр).
+								</div>
+							</div>	
+
+							<div class="accordion_item">
+								<div class="accordion_item-head">													
+									<div class="accordion_item-title">Как мне оплатить продукт, если я из Украины?</div>	
+									<div class="accordion_item-icon">
+										<img src="images/arrow3.svg" alt="">
+									</div>																		
+								</div>
+								<div class="accordion_item-data">
+									Свяжитесь с нами телефону <b><a href="tel:+79830001116">+7 (983) 000-111-6</a></b> (Менеджер Александр).
+								</div>
+							</div>	
+
+							<div class="accordion_item">
+								<div class="accordion_item-head">													
+									<div class="accordion_item-title">А если Вы меня обманите и после оплаты я ничего не получу?...</div>	
+									<div class="accordion_item-icon">
+										<img src="images/arrow3.svg" alt="">
+									</div>																		
+								</div>
+								<div class="accordion_item-data">
+									<p>Этот вопрос весьма уместен, так как в Интернете сейчас полно обмана - много каких-то интернет-магазинов, рекламных страниц и других интернет-ресурсов, где мошенники наживаются на доверчивых покупателях.</p>
+									<p>Ваши опасения очень понятны нам, так как подобные вопросы часто задают читатели, не имеющие опыт покупок в Интернете. Поэтому подробно освещаем этот вопрос.</p>
+									<p>Существует несколько неопровержимых доказательств, по которым ты сможешь проверить мою порядочность:</p>
+									<ol>
+										<li>Роман Винилов - практикующий психолог со стажем 16 лет. В интернете достаточно отзывов о работе с ним на разных ресурсах, которые каждый может найти. Роман проводит живые мастер-классы и тренинги, даёт интервью в СМИ и выступает на различных конференциях.<br>Роман Винилов создатель сообщества для мужчин, крупнейшего в рунете: <a href="Flirt-Style.Ru">Flirt-Style.Ru</a></li>
+										<li>Роман Винилов является официально зарегистрированным индивидуальным предпринимателем и генеральным директором официально зарегистрированного ИП «Винилов». Ведёт отчётность и исправно платит налоги. Вся деятельность проверяется налоговыми органами и документируется.</li>
+										<li>Роман Винилов работает с общеизвестными платежными Интернет-системами, в которых так же ведётся строгая отчётность и контроль соответствующих органов. Имеет персональные сертификаты, которые выдаются только после предоставления всех необходимых документов (паспорт российской федерации, договор и пр.). Компании, осуществляющие работу с электронными деньгами (Яндекс Деньги, WebMoney, RBK-money и прочие представленные среди вариантов оплаты) отчитываются согласно закону перед Государством о всех транзакциях.</li>
+										<li>Роман Винилов пользуется услугами платных хостинг-провайдеров, а так же услугами платных виртуальных почтовых сервисов, что говорит о престиже и качестве организации.</li>
+										<li>У мошенников обычно отсутствует вся эта информация, так как им нужно замести следы после обмана. Они пользуются бесплатными хостингами и почтовыми сервисами. И, конечно, нет никакой обратной связи, кроме "липового" электронного адреса.</li>
+									</ol>
+								</div>
+							</div>	
+
 						</div>
 					</div>
 				</section>
