--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 		<link rel="stylesheet" href="css/fancybox.css">
 		<link rel="stylesheet" href="css/styles.css">
 
-		<link rel="stylesheet" href="css/response_1300.css" media="print, (max-width: 1300px)">
 		<link rel="stylesheet" href="css/response_1187.css" media="print, (max-width: 1187px)">
 		<link rel="stylesheet" href="css/response_1023.css" media="print, (max-width: 1023px)">
 		<link rel="stylesheet" href="css/response_767.css" media="print, (max-width: 767px)">
@@ -654,7 +653,7 @@
 
 
 
-				<section class="need blok bg">
+				<section class="need block bg">
 					<div class="cont">
 						<div class="need_title title">Кто такой автор книги — Роман Винилов</div>
 						<div class="need_img">
