--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								<div class="first-section_info-text">Книга о том, как построить здоровые отношения и быть в них счастливым</div>
 								<div class="first-section_info-btns">
 									<a href="#" class="btn-orange">Хочу книгу сейчас!</a>
-									<a href="#" class="btn-white">Прочитать первую главу</a>
+									<a href="#" class="btn-white2">Прочитать первую главу</a>
 								</div>
 							</div>								
 						</div>
@@ -90,15 +90,42 @@
 					<div class="cont">
 						<div class="about_title title">Данная книга — это:</div>
 						<ul>
-							<li>Уникальное издание в сфере психологии отношений</li>
-							<li>Авторский подход, проверенный на практике</li>
-							<li>Анализ богатого опыта — 12 лет в теме психологии отношений</li>
-							<li>Опыт 3000 клиентов по всему миру, случаи разной сложности</li>
-							<li>Фундаментальный подход к проблеме, доказанный научно</li>
-							<li>Естественная модель построения отношений актуальная сегодня</li>
-							<li>Разбор различных подходов к вопросу построения отношений</li>
-							<li>Основа: качественное развитие человека</li>
-							<li>Большой вопрос психологическому здоровью</li>
+							<li>
+								<i></i>
+								<span>Уникальное издание в сфере психологии отношений</span>
+							</li>
+							<li>
+								<i></i>
+								<span>Авторский подход, проверенный на практике</span>
+							</li>
+							<li>
+								<i></i>
+								<span>Анализ богатого опыта — 12 лет в теме психологии отношений</span>
+							</li>
+							<li>
+								<i></i>
+								<span>Опыт 3000 клиентов по всему миру, случаи разной сложности</span>
+							</li>
+							<li>
+								<i></i>
+								<span>Фундаментальный подход к проблеме, доказанный научно</span>
+							</li>
+							<li>
+								<i></i>
+								<span>Естественная модель построения отношений актуальная сегодня</span>
+							</li>
+							<li>
+								<i></i>
+								<span>Разбор различных подходов к вопросу построения отношений</span>
+							</li>
+							<li>
+								<i></i>
+								<span>Основа: качественное развитие человека</span>
+							</li>
+							<li>
+								<i></i>
+								<span>Большой вопрос психологическому здоровью</span>
+							</li>
 						</ul>
 					</div>
 				</section>
@@ -658,6 +685,9 @@
 						<div class="need_title title">Кто такой автор книги — Роман Винилов</div>
 						<div class="need_img">
 							<img src="images/author.png" alt="">
+						</div>
+						<div class="need_img-mob">
+							<img src="images/author2.png" alt="">
 						</div>
 						<ul>
 							<li>
