--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
 							<div class="book_title title">Да, Роман, я хочу научиться строить счастливые отношения</div>
 							<div class="book_wrap">
 								<div class="book_img">
-									<img src="images/first-section-img.png" alt="">
+									<img src="images/first-section-img.png" alt="" loading="lazy">
 								</div>
 								<div class="book_info">
 									<div class="book_text-big">Я понимаю, что после того, как я оплачу этот заказ, и поддержка обработает его, я получу на указанный ящик электронной почты в виде ссылок на скачивание книгу «Двое. Жизнь после секса»</div>
@@ -617,21 +617,21 @@
 						<div class="volume_items">
 							<div class="volume_item">
 								<div class="volume_item-img">
-									<img src="images/book1.png" alt="">
+									<img src="images/book1.png" alt="" loading="lazy">
 								</div>
 								<div class="volume_item-title">Восстановление отношений от А до Я</div>
 								<div class="volume_item-text">Легендарна книга Романа Винилова про восстановление отношений. Её читали могут себе позволить восстановить отношеняи в кратчайшие сроки даже в самых сложных ситуациях. Книгу прочитали уже более 15 тысяч людей по всему миру</div>
 							</div>
 							<div class="volume_item">
 								<div class="volume_item-img">
-									<img src="images/book2.png" alt="">
+									<img src="images/book2.png" alt="" loading="lazy">
 								</div>
 								<div class="volume_item-title">Быть мужчиной </div>
 								<div class="volume_item-text">Первая книга Романа Винилова, написанная для мужчин. Книга стала популярной потому, что давала простые ответы на сложные вопросы мужчин и показывала как быть мужчиной в наше не простое время</div>
 							</div>
 							<div class="volume_item">
 								<div class="volume_item-img">
-									<img src="images/book3.png" alt="">
+									<img src="images/book3.png" alt="" loading="lazy">
 								</div>
 								<div class="volume_item-title">Быть мужчиной. Жизнь после развода </div>
 								<div class="volume_item-text">Книга про то, как обычный человек может преодолеть сложнейший кризис в своей жизни. В основу книги положена личная история Романа Винилова – его год жизни после развода. Когда он остался один с ребёнком на руках без поддержки кого-либо</div>
@@ -684,10 +684,10 @@
 					<div class="cont">
 						<div class="need_title title">Кто такой автор книги — Роман Винилов</div>
 						<div class="need_img">
-							<img src="images/author.png" alt="">
+							<img src="images/author.png" alt="" loading="lazy">
 						</div>
 						<div class="need_img-mob">
-							<img src="images/author2.png" alt="">
+							<img src="images/author2.png" alt="" loading="lazy">
 						</div>
 						<ul>
 							<li>
